# PORTFOLIO

./: .gitignore  README.md
C:C++/Keylogger_CPP/: .gitignore  CMakeLists.txt  README.md  active_window_macos.cpp  active_window_utils.h  keylogger_interface.h  keylogger_macos.cpp  logger_utils.cpp  logger_utils.h  main.cpp
C:C++/M.I.N.D./: .gitignore  CMakeLists.txt  ComputationModule.hpp  MonteCarloPi.hpp  PrimeFinder.hpp  README.md  main.cpp
C:C++/honeypot_C:C++/: .gitignore  CMakeLists.txt  README.md  honeypot.cpp  honeypot.hpp  logger.cpp  logger.hpp  main.cpp
Java/projekt koncowy/: README.md
Osobisty asystent AI/: README.md  main.py  requirements.txt
Osobisty asystent AI/llm/: local_llm.py
Python/AutoFeatureRefiner/: README.md  main.py
Python/CoinDetector/: .gitignore  README.md  main.py
Python/honeypot_python/: .gitignore  README.md  main.py
